Add TwitterListTimeline support
* Add example TwitterListTimeline to sample client TimelinesActivty pager

Change-Id: If00b3ff4dc27680a91e1b8ffa1a2a39fde235bc3

--- a/samples/app/src/main/res/values/strings.xml
+++ b/samples/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="search_timeline_title">Search Timeline</string>
     <string name="user_timeline_title">User Timeline</string>
     <string name="collection_timeline_title">Collection Timeline</string>
+    <string name="list_timeline_title">List Timeline</string>
     <string name="button_tweet_preview_activity">Preview</string>
     <string name="button_show_light">Light</string>
     <string name="button_show_dark">Dark</string>
