--- a/samples/app/src/main/res/values/strings.xml
+++ b/samples/app/src/main/res/values/strings.xml
@@ -17,9 +17,9 @@
   -->
 
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">TwitterSampleApp</string>
+    <string name="twitter_app_name">TwitterSampleApp</string>
 
-
+    <string name="twitter_sample_activity">TwitterSampleActivity</string>
     <string name="kit_twittercore">Twitter Core</string>
     <string name="kit_tweetcomposer">Tweet Composer</string>
     <string name="kit_tweetui">Tweet Ui</string>
