Fix FabricClient lint warnings from Twitter sample inclusion
Change-Id: Iff7b463ee654e04dea0b3af00d27b5c71fcc9f93

--- a/samples/app/src/main/res/values/strings.xml
+++ b/samples/app/src/main/res/values/strings.xml
@@ -17,9 +17,11 @@
   -->
 
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="twitter_app_name">TwitterSampleApp</string>
+    <string name="twitter_app_name"
+            tools:ignore="UnusedResources">TwitterSampleApp</string>
+    <string name="twitter_sample_activity"
+            tools:ignore="UnusedResources">TwitterSampleActivity</string>
 
-    <string name="twitter_sample_activity">TwitterSampleActivity</string>
     <string name="kit_twittercore">Twitter Core</string>
     <string name="kit_tweetcomposer">Tweet Composer</string>
     <string name="kit_tweetui">Tweet Ui</string>
