Add Tweet Composer Activity UI
Change-Id: I8cb95ab973bc2bde423de325de9205fc1d34f4d4

--- a/samples/app/src/main/res/values/strings.xml
+++ b/samples/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
     <string name="kit_tweetui">Tweet Ui</string>
 
     <!-- TweetComposer strings -->
-    <string name="tweet">Tweet</string>
+    <string name="twitter_composer">Twitter Composer</string>
+    <string name="twitter_kit_composer">TwitterKit Composer</string>
 
     <!-- TweetUi strings -->
     <string name="preview_tweet">Preview</string>
