--- a/samples/app/src/main/res/values/strings.xml
+++ b/samples/app/src/main/res/values/strings.xml
@@ -24,8 +24,7 @@
     <string name="kit_tweetui">Tweet Ui</string>
 
     <!-- TweetComposer strings -->
-    <string name="twitter_composer">Twitter Composer</string>
-    <string name="twitter_kit_composer">TwitterKit Composer</string>
+    <string name="tweet">Tweet</string>
 
     <!-- TweetUi strings -->
     <string name="preview_tweet">Preview</string>
