--- a/tweet-ui/src/main/res/values-nl/strings.xml
+++ b/tweet-ui/src/main/res/values-nl/strings.xml
@@ -20,7 +20,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="tw__loading_tweet">Tweet laden…</string>
     <string name="tw__retweeted_by_format">Geretweet door %1$s</string>
-    <string name="tw__share_content_format">Bekijk de tweet van \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
+    <string name="tw__share_content_format">Bekijk de Tweet van \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet van %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Tweet delen</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
