--- a/tweet-ui/src/main/res/values-zh-rTW/strings.xml
+++ b/tweet-ui/src/main/res/values-zh-rTW/strings.xml
@@ -18,5 +18,10 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__loading_tweet">正在載入推文</string>
     <string name="tw__retweeted_by_format">由 %1$s 轉推</string>
+    <string name="tw__share_content_format">查看 \@%1$s 的推文：https://twitter.com/%1$s/status/%2$s</string>
+    <string name="tw__share_subject_format">來自 %1$s (\@%2$s) 的推文</string>
+    <string name="tw__share_tweet">分享推文</string>
+    <string name="tw__tweet_content_description">%1$s。%2$s。%3$s。</string>
 </resources>
