--- a/twitter-core/src/main/res/values-vi/strings.xml
+++ b/twitter-core/src/main/res/values-vi/strings.xml
@@ -19,8 +19,8 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="tw__allow_btn_txt">Cho phép</string>
-    <string name="tw__login_btn_txt">Đăng nhập vào Twitter</string>
+    <string name="tw__login_btn_txt">Đăng nhập bằng Twitter</string>
     <string name="tw__not_now_btn_txt">Không phải bây giờ</string>
-    <string name="tw__share_email_desc">Nhận cập nhật và các thông tin khác từ %1$s khi bạn cho phép họ truy cập email của bạn trên tài khoản Twitter của bạn \@%2$s</string>
+    <string name="tw__share_email_desc">Nhận các cập nhật và thông tin khác từ %1$s khi bạn cho phép họ truy cập email trên tài khoản Twitter của bạn \@%2$s</string>
     <string name="tw__share_email_title">Chia sẻ địa chỉ email của bạn</string>
 </resources>
