--- a/tweet-ui/src/main/res/values-it/strings.xml
+++ b/tweet-ui/src/main/res/values-it/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Metti Mi Piace al Tweet</string>
+    <string name="tw__liked_tweet">Non mi piace più</string>
     <string name="tw__loading_tweet">Caricamento del Tweet in corso</string>
     <string name="tw__retweeted_by_format">Ritwittato da %1$s</string>
     <string name="tw__share_content_format">Dai un\'occhiata al Tweet di \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
