--- a/tweet-ui/src/main/res/values-tr/strings.xml
+++ b/tweet-ui/src/main/res/values-tr/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Tweet Beğen</string>
+    <string name="tw__liked_tweet">Beğenmekten Vazgeç</string>
     <string name="tw__loading_tweet">Tweet Yükleniyor</string>
     <string name="tw__retweeted_by_format">%1$s tarafından Retweetlendi</string>
     <string name="tw__share_content_format">\@%1$s adlı kişinin Tweetini incele: https://twitter.com/%1$s/status/%2$s</string>
