--- a/tweet-ui/src/main/res/values-fi/strings.xml
+++ b/tweet-ui/src/main/res/values-fi/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Tykkää twiitistä</string>
+    <string name="tw__liked_tweet">Kumoa tykkäys</string>
     <string name="tw__loading_tweet">Ladataan twiittiä</string>
     <string name="tw__retweeted_by_format">Uudelleentwiitannut %1$s</string>
     <string name="tw__share_content_format">Katso käyttäjän \@%1$s twiitti: https://twitter.com/%1$s/status/%2$s</string>
