--- a/tweet-ui/src/main/res/values-hu/strings.xml
+++ b/tweet-ui/src/main/res/values-hu/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Tweet kedvelése</string>
+    <string name="tw__liked_tweet">Tweet kedvelésének visszavonása</string>
     <string name="tw__loading_tweet">Tweet betöltése</string>
     <string name="tw__retweeted_by_format">%1$s retweetelte</string>
     <string name="tw__share_content_format">Nézd meg \@%1$s\ felhasználó tweetjét: https://twitter.com/%1$s/status/%2$s</string>
