--- a/tweet-ui/src/main/res/values-ko/strings.xml
+++ b/tweet-ui/src/main/res/values-ko/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">마음에 들어요</string>
+    <string name="tw__liked_tweet">마음에 들어요 취소</string>
     <string name="tw__loading_tweet">트윗을 불러오는 중</string>
     <string name="tw__retweeted_by_format">%1$s 님이 리트윗함</string>
     <string name="tw__share_content_format">\@%1$s 님의 트윗 보기: https://twitter.com/%1$s/status/%2$s</string>
