--- a/tweet-ui/src/main/res/values-nb/strings.xml
+++ b/tweet-ui/src/main/res/values-nb/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Lik Tweet</string>
+    <string name="tw__liked_tweet">Angre Liker</string>
     <string name="tw__loading_tweet">Laster inn tweeten</string>
     <string name="tw__retweeted_by_format">Retweetet av %1$s</string>
     <string name="tw__share_content_format">Sjekk \@%1$s\s tweet: https://twitter.com/%1$s/status/%2$s</string>
