--- a/tweet-ui/src/main/res/values-ru/strings.xml
+++ b/tweet-ui/src/main/res/values-ru/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Мне нравится</string>
+    <string name="tw__liked_tweet">Не нравится</string>
     <string name="tw__loading_tweet">Загрузка твита</string>
     <string name="tw__retweeted_by_format">Ретвитнуто пользователем %1$s</string>
     <string name="tw__share_content_format">Посмотрите твит пользователя \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
