--- a/tweet-ui/src/main/res/values-ar/strings.xml
+++ b/tweet-ui/src/main/res/values-ar/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">إعجاب بالتغريدة</string>
+    <string name="tw__liked_tweet">إلغاء الإعجاب</string>
     <string name="tw__loading_tweet">يتم تحميل التغريدة</string>
     <string name="tw__retweeted_by_format">مُعاد تغريدها بواسطة %1$s</string>
     <string name="tw__share_content_format">اطلع على تغريدة ‎\@%1$s\: https://twitter.com/%1$s/status/%2$s</string>
