--- a/tweet-ui/src/main/res/values-es/strings.xml
+++ b/tweet-ui/src/main/res/values-es/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Darle Me gusta al Tweet</string>
+    <string name="tw__liked_tweet">Deshacer Me gusta</string>
     <string name="tw__loading_tweet">Cargando Tweet</string>
     <string name="tw__retweeted_by_format">Retwitteado por %1$s</string>
     <string name="tw__share_content_format">Échale un vistazo al Tweet de \@%1$s\: https://twitter.com/%1$s/status/%2$s</string>
