--- a/tweet-ui/src/main/res/values-in/strings.xml
+++ b/tweet-ui/src/main/res/values-in/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Menyukai Tweet</string>
+    <string name="tw__liked_tweet">Batal Suka</string>
     <string name="tw__loading_tweet">Memuat Tweet</string>
     <string name="tw__retweeted_by_format">Di-retweet oleh %1$s</string>
     <string name="tw__share_content_format">Lihat Tweet \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
