--- a/tweet-ui/src/main/res/values-iw/strings.xml
+++ b/tweet-ui/src/main/res/values-iw/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">סמן ציוץ כאהוב</string>
+    <string name="tw__liked_tweet">בטל סימון כאהוב</string>
     <string name="tw__loading_tweet">טוען ציוץ</string>
     <string name="tw__retweeted_by_format">צויץ מחדש על-ידי %1$s</string>
     <string name="tw__share_content_format">בוא לראות את הציוץ של ‎\@%1$s‏: https://twitter.com/%1$s/status/%2$s</string>
