--- a/tweet-ui/src/main/res/values-ja/strings.xml
+++ b/tweet-ui/src/main/res/values-ja/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">ツイートにいいねする</string>
+    <string name="tw__liked_tweet">いいねを取り消す</string>
     <string name="tw__loading_tweet">ツイートを読込中</string>
     <string name="tw__retweeted_by_format">%1$sさんがリツイート</string>
     <string name="tw__share_content_format">\@%1$sさんのツイートをチェックしましょう　 https://twitter.com/%1$s/status/%2$s</string>
