--- a/tweet-ui/src/main/res/values-pl/strings.xml
+++ b/tweet-ui/src/main/res/values-pl/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Polub Tweet</string>
+    <string name="tw__liked_tweet">Nie lubię</string>
     <string name="tw__loading_tweet">Wczytywanie tweeta</string>
     <string name="tw__retweeted_by_format">Podane dalej przez %1$s</string>
     <string name="tw__share_content_format">Zobacz tweet od \@%1$s\: https://twitter.com/%1$s/status/%2$s</string>
