--- a/tweet-ui/src/main/res/values-th/strings.xml
+++ b/tweet-ui/src/main/res/values-th/strings.xml
@@ -18,6 +18,8 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">ชื่นชอบทวีต</string>
+    <string name="tw__liked_tweet">เลิกชื่นชอบ</string>
     <string name="tw__loading_tweet">กำลังโหลดทวีต</string>
     <string name="tw__retweeted_by_format">ถูกรีทวีตโดย %1$s</string>
     <string name="tw__share_content_format">ดูทวีตของ \@%1$s: Tweet: https://twitter.com/%1$s/status/%2$s</string>
