--- a/twitter-core/src/main/res/values/strings.xml
+++ b/twitter-core/src/main/res/values/strings.xml
@@ -25,8 +25,7 @@
     <string name="tw__share_email_title">Share your email address</string>
     <!-- Description shown in Share email activity -->
     <!--suppress MissingTranslation -->
-    <string name="tw__share_email_desc">Get updates and other information from %1$s when you allow
-        them access to your email on your Twitter account \@%2$s</string>
+    <string name="tw__share_email_desc">Allow %1$s to access the email address associated with your Twitter account \@%2$s so that %1$s can use it according to its privacy policy. For example, %1$s could send you updates and other information at that address.</string>
     <!-- Button text to allow action -->
     <!--suppress MissingTranslation -->
     <string name="tw__allow_btn_txt">Allow</string>
